--- a/unit-7/137-CA-07.tex
+++ b/unit-7/137-CA-07.tex
@@ -232,7 +232,7 @@ node[black,midway,yshift=-20pt]{finer partitions}; }
 			\item ${\displaystyle C = \{ 2, 3, 4\}}$
 				\vfill
 
-			\item ${\displaystyle  D = \left\{ \frac{1n}{\;} : \; n \in \mathbb{Z}, \, n >0 \right\} }$
+			\item ${\displaystyle  D = \left\{ \frac{1}{n}\; : \; n \in \mathbb{Z}, \, n >0 \right\} }$
 				\vfill
 
 			\item ${\displaystyle  E = \left\{ \frac{(-1)^{n}}{n} \; : \; n \in \mathbb{Z}, \, n >0 \right\} }$
