--- a/unit-9/137-CA-09.tex
+++ b/unit-9/137-CA-09.tex
@@ -224,6 +224,37 @@
 			\end{column}
 		\end{columns}
 	\end{frame}
+\begin{frame}[t]
+\frametitle{The error function} 
+
+The following function	is tabulated.
+	\[
+		{\Large E(x) =  \int_0^x e^{-t^2} dt}.
+	\]
+Write the following quantities in terms of $E$:
+
+\begin{multicols}{2}
+	\begin{enumerate}
+		\item ${\int_1^{2} e^{-t^2} dt}$
+		
+		\vv
+		\item ${\int_0^x t^2 e^{-t^2} dt}$
+		
+		\vv
+		\item  ${\int_0^x e^{-2t^2} dt}$
+		
+		\vv
+\p		\item  ${\int_0^1  e^{-t^2+6t} dt}$
+		
+		\vv
+		\item  ${\int_{x_1}^{x_2}  e^{-\frac{(t- \mu)^2}{\sigma^2}} dt}$
+
+		\vv
+		\item  ${\int_1^2 \frac{e^{-t}}{\sqrt{t}} dt}$
+	\end{enumerate}
+\end{multicols}
+
+\end{frame}
 
 \begin{frame}
 	\frametitle{MAT137 Lecture 47 --- Integration of Products of Trig{.} Functions}
