--- a/unit-11/137-CA-11.tex
+++ b/unit-11/137-CA-11.tex
@@ -223,18 +223,18 @@
 		\end{center}
 	\end{frame}
 	%-----------------------------
-	\begin{frame}[t]
-		\frametitle{A sequence defined by recurrence}
-
-		Consider the sequence ${\displaystyle \Rn}$ defined by
-		\begin{equation*}
-			\begin{cases}
-				                        & R_{0} = 1                          \\
-				\forall n \in \N, \quad & R_{n+1}= \dfrac{ R_n + 2}{R_n + 3}
-			\end{cases}
-		\end{equation*}
-		Compute ${\displaystyle R_1, \, R_2, \, R_3}$.
-	\end{frame}
+%	\begin{frame}[t]
+%		\frametitle{A sequence defined by recurrence}
+%
+%		Consider the sequence ${\displaystyle \Rn}$ defined by
+%		\begin{equation*}
+%			\begin{cases}
+%				                        & R_{0} = 1                          \\
+%				\forall n \in \N, \quad & R_{n+1}= \dfrac{ R_n + 2}{R_n + 3}
+%			\end{cases}
+%		\end{equation*}
+%		Compute ${\displaystyle R_1, \, R_2, \, R_3}$.
+%	\end{frame}
 	\begin{frame}[t]
 		\smallerfont
 		\frametitle{\smallerfont True or False - convergence, monotonicity, and
